--- a/css/gps/gps2-1.css
+++ b/css/gps/gps2-1.css
@@ -1,1 +1,13 @@
-body {outline: solid red 2px;}
+body {
+  font-family: helvetica;
+  color: blue;
+  background-image: url("https://s-media-cache-ak0.pinimg.com/736x/16/64/c5/1664c50e43535640ec7cc40d49b0b017.jpg")
+}
+.column-1, .column-2 {
+  padding: 10px;
+  margin: 20px;
+  border: solid 2px;
+  display: inline-block;
+  width: 40%;
+  vertical-align: text-top;
+}
